--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ beautifulsoup4==4.12.2
 black==23.3.0
 isort==5.12.0
 jupyterlab==4.0.0
+jupyterlab_code_formatter==2.2.1
 pandas==2.0.1
-psycopg2-binary==2.9.6
 requests==2.30.0
 selenium==4.10.0
 SQLAlchemy==2.0.15
